Added post-build zipping for publishing

--- a/TerrariaCompiler.csproj
+++ b/TerrariaCompiler.csproj
@@ -24,7 +24,7 @@
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' Or '$(Configuration)|$(Platform)' == 'Publish|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
@@ -63,4 +63,7 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Publish ("$(ProjectDir)Tools\ZipTool.exe" "$(TargetDir)\" "$(ProjectDir)TerrariaCompiler.zip")</PostBuildEvent>
+  </PropertyGroup>
 </Project>
